# debmutate

./: .flake8  .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TODO  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
debian/: changelog  control  copyright  drop-mia-uploaders.1  gitlab-ci.yml  manpages
debian/tests/: control  testsuite
debmutate/: __init__.py  _deb822.py  _rules.py  ben.py  changelog.py  control.py  copyright.py  deb822.py  debcargo.py  debhelper.py  lintian_overrides.py  orig.py  patch.py  reformatting.py  vcs.py  vendor.py  versions.py  watch.py
debmutate/tests/: __init__.py  test__rules.py  test_changelog.py  test_control.py  test_copyright.py  test_deb822.py  test_debcargo.py  test_debhelper.py  test_debmutate.py  test_lintian_overrides.py  test_orig.py  test_patch.py  test_reformatting.py  test_vcs.py  test_versions.py  test_watch.py
examples/: set-maintainer.py
scripts/: deb-enable-rrr  drop-mia-uploaders  update-rust-deps
tests/: __init__.py  test__rules.py  test_changelog.py  test_control.py  test_copyright.py  test_deb822.py  test_debcargo.py  test_debhelper.py  test_debmutate.py  test_lintian_overrides.py  test_orig.py  test_patch.py  test_reformatting.py  test_vcs.py  test_versions.py  test_watch.py
