[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[project]
name = "debmutate"
authors = [{name = "Jelmer Vernooĳ", email = "jelmer@debian.org"}]
description = "manipulation of Debian package control files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python_debian>=0.1.44",
    "python-tr",
    "merge3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://salsa.debian.org/jelmer/debmutate"
Repository = "https://salsa.debian.org/jelmer/debmutate.git"

[project.optional-dependencies]
debcargo = ["tomlkit"]
watch = ["pcre2"]
dev = [
    "ruff==0.11.2"
]

[tool.setuptools]
script-files = [
    "scripts/deb-enable-rrr",
    "scripts/drop-mia-uploaders",
]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
debmutate = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "debmutate.__version__"}

[tool.ruff.lint]
select = [
    "ANN",
    "D",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D204",
    "D205",
    "D417",
    "E501",  # line too long
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.pydocstyle]
convention = "google"
