[mypy]
ignore_missing_imports = True

[flake8]
banned-modules =
  dulwich = Avoid using VCS modules
  breezy = Avoid using VCS modules

[metadata]
name = debmutate
version = attr:debmutate.__version__
author = Jelmer Vernooĳ
author_email = jelmer@debian.org
description = manipulation of Debian package control files
url = https://salsa.debian.org/jelmer/debmutate

[options]
packages = find:
install_requires =
    python_debian>=0.1.44
    python-tr
    merge3

[options.extras_require]
debcargo = tomlkit
