[metadata]
project_urls =
    Repository=https://salsa.debian.org/jelmer/debmutate.git
name = debmutate
version = attr:debmutate.__version__
author = Jelmer Vernooĳ
author_email = jelmer@debian.org
description = manipulation of Debian package control files
long_description = file:README.md
url = https://salsa.debian.org/jelmer/debmutate

[options]
scripts =
    scripts/deb-enable-rrr
    scripts/drop-mia-uploaders
packages = find:
install_requires =
    python_debian>=0.1.44
    python-tr
    merge3

[options.package_data]
debmutate = py.typed

[mypy]
ignore_missing_imports = True

[flake8]
banned-modules =
    dulwich = Avoid using VCS modules
    breezy = Avoid using VCS modules

[options.extras_require]
debcargo = tomlkit
watch = python-pcre

[options.package_data]
debmutate = py.typed
